jsonschemadsl2ecore.trafo.opt/test/test09/validtests/example8.test9
{
	"job":{
		"level":1.0
	}
}