jsonschemadsl2ecore.trafo.opt/test/test09/invalidtests/example2.test9
{
	"job":"some job",
	"add1":1
}